--- a/queries/package.json
+++ b/queries/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posts",
+  "name": "queries",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,7 +13,6 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4",
-    "uuid": "^8.2.0"
+    "nodemon": "^2.0.4"
   }
 }
