Updated config to use kubernetes and skaffold

--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run react-build && npm run docker-build && npm run docker-push",
+    "react-build": "react-scripts build",
+    "docker-build": "docker build -t joelmusicman/reactapp .",
+    "docker-push": "docker push joelmusicman/reactapp",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
