--- a/posts/package.json
+++ b/posts/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm run docker-build && npm run docker-push",
+    "docker-build": "docker build -t joelmusicman/posts .",
+    "docker-push": "docker push joelmusicman/posts"
   },
   "author": "",
   "license": "ISC",
