--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:12.18.2-alpine3.11
 
 WORKDIR /app
-ADD build /app/build
-RUN npm install -g serve
+COPY package.json ./
+RUN npm install
+COPY ./ ./
 
-EXPOSE 3000
-
-CMD serve -s -l 3000 build
+CMD ["npm", "start"]
