--- a/infra/k8s/client-depl.yml
+++ b/infra/k8s/client-depl.yml
@@ -14,7 +14,17 @@ spec:
     spec:
       containers:
         - name: client
-          image: joelmusicman/reactapp
+          stdin: true
+          tty: true
+          image: joelmusicman/client
+          startupProbe:
+            httpGet: 
+              path: /
+              port: 3000
+            initialDelaySeconds: 60
+            periodSeconds: 5
+            failureThreshold: 20
+
 ---
 apiVersion: v1
 kind: Service
@@ -22,6 +32,20 @@ metadata:
   name: client-srv
 spec:
   type: NodePort
+  selector:
+    app: client
+  ports:
+    - name: client
+      protocol: TCP
+      port: 3000
+      targetPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: client-clusterip-srv
+spec:
+  type: ClusterIP
   selector:
     app: client
   ports:
