--- a/infra/k8s/comments-depl.yml
+++ b/infra/k8s/comments-depl.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: comments-depl
+  namespace: posts
 spec:
   replicas: 1
   selector:
@@ -20,6 +21,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: comments-clusterip-srv
+  namespace: posts
 spec:
   type: ClusterIP
   selector:
@@ -34,6 +36,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: comments-srv
+  namespace: posts
+
 spec:
   type: NodePort
   selector:
