--- a/infra/k8s/event-bus-depl.yml
+++ b/infra/k8s/event-bus-depl.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: event-bus-depl
+  namespace: posts
 spec:
   replicas: 1
   selector:
@@ -20,6 +21,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: event-bus-srv
+  namespace: posts
 spec:
   type: ClusterIP
   selector:
