--- a/infra/k8s/ingress-srv.yml
+++ b/infra/k8s/ingress-srv.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: ingress-srv
+  namespace: posts
   annotations:
     kubernetes.io/ingress.class: nginx
     ingress.kubernetes.io/ssl-redirect: 'false'
