--- a/infra/k8s/posts-depl.yml
+++ b/infra/k8s/posts-depl.yml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: posts-depl
+  namespace: posts
+
 spec:
   replicas: 1
   selector:
@@ -20,6 +22,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: posts-clusterip-srv
+  namespace: posts
+
 spec:
   type: ClusterIP
   selector:
@@ -34,6 +38,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: posts-srv
+  namespace: posts
+
 spec:
   type: NodePort
   selector:
